# farm-website

./: .env  .gitignore  .prettierignore  Dockerfile  README.md  alex.html  dev.sh  docker-compose.yml  index.html  map.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/adapter-node/: index.js  manifest-full.js  manifest.js
.svelte-kit/adapter-node/.vite/: manifest.json
.svelte-kit/adapter-node/chunks/: index.js  internal.js  weather.js
.svelte-kit/adapter-node/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/types/: route_meta_data.json
assets/css/: base.css  layout.css  site.css  tw.css
assets/js/: app.js  config.js  layers.js  ui.js  utils.js
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  weather_server.py
backend/data/: bounds.json  farm.geojson  optimal_bounds.json
config/: gbros-pip.yml  gbros.yml
frontend/: package.json  svelte.config.js  tailwind.config.cjs
frontend/lib/: config.ts  layers.ts  ui.ts  utils.ts
frontend/src/: app.css
frontend/src/lib/: config.ts  layers.ts  utils.ts
frontend/src/routes/: +page.svelte
src/: app.css
src/lib/: config.ts  layers.ts  mockWeather.ts  mqss.ts  ui.ts  weather.ts
src/lib/providers/: backend.ts  ecowitt.ts
src/lib/server/: db.ts
src/routes/: +page.svelte
src/routes/map/: +page.svelte
src/routes/paddock/: +page.svelte
src/routes/paddocks/: +page.svelte
(+95 files in other folders)
