[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "farm-api"
version = "0.1.0"
description = "FastAPI backend for farm website"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1.0",
  "orjson>=3.9",
]

[tool.hatch.build]
include = ["app/**"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
